<resources>
    <string name="app_name">My Application</string>
    <string name="login">登录</string>
    <string name="login_title">用户登录页面</string>
    <string name="exit">退出</string>
    <string name="search">搜索</string>
    <string name="password">密&#160;&#160;&#160;&#160;&#160;&#160;码:&#160;</string>
    <string name="username">用户名:</string>
    <string name="input_username">请输入用户名</string>
    <string name="phone">手&#160;机&#160;&#160;号:</string>
    <string name="input_phone">请输入手机号</string>
    <string name="varify_code">验&#160;&#160;证&#160;&#160;码:</string>
    <string name="apply_varify_code">获取验证码</string>
    <string name="pvarify_code">请输入验证码</string>
    <string name="login_password">登录密码:</string>
    <string name="input_password">请输入密码</string>
    <string name="input_new_password">请输入六位新密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="remember_password">记住密码</string>
    <string name="new_password">新&#160;密&#160;&#160;码:</string>
    <string name="confirm_password">确认密码:</string>
    <string name="confirm">确认</string>
    <string name="search_goods">请输入要搜索的商品</string>


</resources>