<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"

        android:layout_marginTop="150dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_change1"
            android:layout_width="325dp"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/login_title"
            android:background="@drawable/login_shape"
            android:textColor="@color/white"
            android:textSize="30dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/common_font_size" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_selector"
                android:hint="@string/input_phone"
                android:inputType="text"
                android:maxLength="11"
                android:minWidth="150dp"
                android:textColorHint="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_change2"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textSize="@dimen/common_font_size" />

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_selector"
                android:hint="@string/input_new_password"
                android:inputType="numberPassword"
                android:maxLength="11"
                android:minWidth="150dp"
                android:textColorHint="@color/gray" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_confirm_password"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textSize="@dimen/common_font_size" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_selector"
                android:hint="@string/input_new_password"
                android:inputType="numberPassword"
                android:maxLength="11"
                android:minWidth="150dp"
                android:textColorHint="@color/gray" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/varify_code"
                android:textSize="@dimen/common_font_size" />

            <EditText
                android:id="@+id/et_fvarifycode"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_selector"
                android:hint="@string/pvarify_code"
                android:inputType="numberPassword"
                android:minWidth="150dp"
                android:textColorHint="@color/gray" />
            <Button
                android:id="@+id/btn_apply"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/apply_varify_code"
                android:textSize="@dimen/small_text_size"
                android:background="@drawable/login_shape"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textSize="@dimen/common_font_size"
                android:background="@drawable/login_shape"
                android:textColor="@color/white"/>

            <!--<Button
                android:id="@+id/btn_exit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="忘记密码" />-->
        </LinearLayout>
    </LinearLayout>


</LinearLayout>