<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="400dp"

        android:layout_marginTop="150dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="325dp"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/login_title"
            android:background="@drawable/login_shape"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/common_font_size" />

            <EditText
                android:id="@+id/et_user"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_selector"
                android:hint="@string/input_phone"
                android:inputType="text"
                android:maxLength="11"
                android:minWidth="150dp"
                android:textColorHint="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/common_font_size" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_selector"
                android:hint="@string/input_password"
                android:inputType="numberPassword"
                android:minWidth="150dp"
                android:textColorHint="@color/gray"
                android:autofillHints="3" />
            <Button
                android:id="@+id/btn_forget"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/forget_password"
                android:textSize="@dimen/small_text_size"
                android:background="@drawable/login_shape"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/ck_remember"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:button="@drawable/checkbox_selector"
                android:text="@string/remember_password"
                android:textColor="#818180"
                android:textSize="@dimen/common_font_size" />
            <LinearLayout
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:text="@string/login"
                android:textSize="@dimen/common_font_size"
                android:background="@drawable/login_shape"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btn_sign"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="新用户注册"
                android:textSize="@dimen/common_font_size"
                android:background="@drawable/login_shape"
                android:textColor="@color/white"/>
        </LinearLayout>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_login"
            android:layout_width="300dp"
            android:layout_height="50dp"

            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="密码登录"
                android:textColor="#818180"
                android:textSize="@dimen/common_font_size" />

            <RadioButton
                android:id="@+id/rb_verifycode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="验证码登录"
                android:textColor="#818180"
                android:textSize="@dimen/common_font_size" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>